--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>자기소개 카드 예제</title>
+    <title>Protfolio</title>
     <style>
       body {
         font-family: sans-serif;
