--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <link href="styles.css" rel="stylesheet"/>
     <meta charset="UTF-8" />
     <title>Portfolio</title>
     <style>
