--- a/index.html
+++ b/index.html
@@ -33,9 +33,15 @@
         padding: 15px;
         object-fit: contain;
       }
+      page-top {
+        background: black;
+        width: auto;
+        margin: 0px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     </style>
   </head>
   <body>
+    <header> </header>
     <div class="card">
       <img class "img" src="KakaoTalk_20250911_124140924.jpg" alt="..." />
       <h2>김윤우</h2>
