--- a/index.html
+++ b/index.html
@@ -38,10 +38,15 @@
         width: auto;
         margin: 0px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      }
     </style>
   </head>
   <body>
-    <header> </header>
+    <div class="page-top">
+      <p> TEST</p>
+    </div>
+  </body>
+  <body>
     <div class="card">
       <img class "img" src="KakaoTalk_20250911_124140924.jpg" alt="..." />
       <h2>김윤우</h2>
