--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
       }
     </style>
   </head>
-  <body>
+  <header>
     <div class="page-top">
       <p> TEST</p>
     </div>
-  </body>
+  </header>
   <body>
     <div class="card">
       <img class "img" src="KakaoTalk_20250911_124140924.jpg" alt="..." />
