--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       page-top {
         background: black;
         width: auto;
+        height: 50px;
         margin: 0px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       }
