--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="styles.css" rel="stylesheet" />
     <meta charset="UTF-8" />
     <title>Portfolio</title>
     <style>
@@ -23,28 +23,28 @@
         color: #333;
       }
       .card p {
-        margin: 6px 0;3
+        margin: 6px 0;
       }
       img {
         border-radius: 25px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        width:300px;
-        height: 400px
+        width: 300px;
+        height: 400px;
         padding: 15px;
         object-fit: contain;
       }
-      page-top {
-        background: black;
-        width: auto;
-        height: 50px;
-        margin: 0px;
+      .page-top {
+        background: rgb(0, 0, 0);
+        width: 2000px;
+        height: 100px;
+
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       }
     </style>
   </head>
   <header>
     <div class="page-top">
-      <p> TEST</p>
+      <p>TEST</p>
     </div>
   </header>
   <body>
