--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         width: 295px;
         height: 380px;
         object-fit: contain;
+        justify-content: center;
       }
       .page-top {
         border-bottom-right-radius: 16px;
