--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         height: 380px;
         object-fit: contain;
         justify-content: center;
+        text-align: center;
       }
       .page-top {
         border-bottom-right-radius: 16px;
