--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         margin: 6px 0;
       }
       .img-profile {
+        display: block;
+        margin: 0 auto 16px;
         border-radius: 16px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         width: 295px;
