--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       }
       .card {
         flex: 1;
+        display: inline-block;   /* 줄폭 전체를 차지하지 않게 */
+        width: auto; 
         min-width: 250px;
         background: white;
         width: 300px auto;
